--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "calendar-worker",
   "version": "0.0.0",
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.16.0",
-    "typescript": "^4.8.4",
-    "wrangler": "2.1.10"
+    "@cloudflare/workers-types": "^4.20240512.0",
+    "typescript": "^5.4.5",
+    "wrangler": "^3.57.1"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "ical-generator": "^3.6.0"
-  }
+    "ical-generator": "^7.1.0"
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
